--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+Double+Pica&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@600&display=swap');
+html {
+	scroll-behavior: smooth;
+}
+body {
+	font-family: 'Manrope', cursive;
+	color: #dceef9;
+	background-color: white;
+}
+.FrontView {
+	text-align: center;
+	margin: 5px auto;
+	height: 100%;
+	width: 85%;
+	border: 1px solid white;
+	box-shadow: 0px 5px 10px #888888;
+}
 .App {
-  text-align: center;
+}
+.Socials {
+	margin-top: 50px;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	background: linear-gradient(45deg, #0c0c0c, hsl(250, 71%, 32%));
+	background-size: 400% 400%;
+	animation: gradient 10s ease infinite;
+}
+.TextFooter {
+	font-size: 40px;
+	color: white;
+	font-family: 'Manrope', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
