--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -74,3 +74,12 @@ i:hover {
 	color: yellow;
 	transition: 0.2s ease-in;
 }
+
+@media screen and (max-width: 690px) {
+	img {
+		max-width: 200px;
+		max-height: 300px;
+
+		height: auto;
+	}
+}
