--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -6,3 +6,13 @@
 #MyProj {
 	margin-top: 50px;
 }
+
+@media screen and (max-width: 1400px) {
+	.Projects {
+		margin-top: 25px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+}
