--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -9,12 +9,32 @@
 .LangContainer {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
-
+	grid-row-gap: 25px;
 	grid-column-gap: 25px;
+	grid-template-rows: auto auto;
 }
 h1 {
 	border-bottom: 0.1px solid black;
 }
 #Skills {
 	margin: 5px;
+}
+
+@media screen and (max-width: 1400px) {
+	.SkillsContainer {
+		display: grid;
+
+		grid-template-columns: 1fr;
+		grid-row-gap: 25px;
+		grid-column-gap: 25px;
+		grid-template-rows: 150px;
+	}
+	.LangContainer {
+		display: grid;
+
+		grid-template-columns: 1fr;
+		grid-row-gap: 25px;
+		grid-column-gap: 25px;
+		grid-template-rows: 150px;
+	}
 }
