--- a/src/components/Description.css
+++ b/src/components/Description.css
@@ -48,3 +48,15 @@ h5 {
 	max-height: 100px;
 	border-radius: 30px;
 }
+
+@media screen and (max-width: 765px) {
+	.DescMini {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column-reverse;
+	}
+	.DescriptionCont {
+		height: auto;
+	}
+}
