--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -32,3 +32,10 @@ li {
 a {
 	text-decoration: none;
 }
+
+@media screen and (max-width: 765px) {
+	.NavContainer {
+		display: flex;
+		justify-content: center;
+	}
+}
