--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -31,10 +31,7 @@ h1 {
 	}
 	.LangContainer {
 		display: grid;
-
+		text-align: center;
 		grid-template-columns: 1fr;
-		grid-row-gap: 25px;
-		grid-column-gap: 25px;
-		grid-template-rows: 150px;
 	}
 }
