--- a/src/components/Skill.css
+++ b/src/components/Skill.css
@@ -1,8 +1,8 @@
 .Skill {
 	font-size: 48px;
-	color: #dceef9;
+	color: #032235;
 	border: 0.1px solid rgba(240, 161, 161, 0.959);
-	background-color: hsl(250, 71%, 60%);
+	background-color: hsl(34, 5%, 74%);
 	padding: 25px;
 	border-radius: 10px;
 	text-align: center;
